--- a/404.html
+++ b/404.html
@@ -8,13 +8,13 @@
     
     <meta name="description" content="Ieu js sdk, 三方登录服务组件，社交分享组件，ejoysdk">
     
-    <link rel="preload" href="/ieu-js-sdk/assets/css/0.styles.4dcdadaf.css" as="style"><link rel="preload" href="/ieu-js-sdk/assets/js/app.fa43aac8.js" as="script"><link rel="preload" href="/ieu-js-sdk/assets/js/6.60d915b0.js" as="script"><link rel="prefetch" href="/ieu-js-sdk/assets/js/10.7048cd82.js"><link rel="prefetch" href="/ieu-js-sdk/assets/js/11.a5bc9c3b.js"><link rel="prefetch" href="/ieu-js-sdk/assets/js/12.330c81ca.js"><link rel="prefetch" href="/ieu-js-sdk/assets/js/13.4925618b.js"><link rel="prefetch" href="/ieu-js-sdk/assets/js/14.66c4676a.js"><link rel="prefetch" href="/ieu-js-sdk/assets/js/15.6235f8c7.js"><link rel="prefetch" href="/ieu-js-sdk/assets/js/16.29e8606e.js"><link rel="prefetch" href="/ieu-js-sdk/assets/js/2.45932810.js"><link rel="prefetch" href="/ieu-js-sdk/assets/js/3.cee245a3.js"><link rel="prefetch" href="/ieu-js-sdk/assets/js/4.b4088367.js"><link rel="prefetch" href="/ieu-js-sdk/assets/js/5.42433e02.js"><link rel="prefetch" href="/ieu-js-sdk/assets/js/7.b772706a.js"><link rel="prefetch" href="/ieu-js-sdk/assets/js/8.cc9c3b34.js"><link rel="prefetch" href="/ieu-js-sdk/assets/js/9.0080cbfe.js">
+    <link rel="preload" href="/ieu-js-sdk/assets/css/0.styles.4dcdadaf.css" as="style"><link rel="preload" href="/ieu-js-sdk/assets/js/app.01985006.js" as="script"><link rel="preload" href="/ieu-js-sdk/assets/js/6.60d915b0.js" as="script"><link rel="prefetch" href="/ieu-js-sdk/assets/js/10.56ae91af.js"><link rel="prefetch" href="/ieu-js-sdk/assets/js/11.a6c91a4b.js"><link rel="prefetch" href="/ieu-js-sdk/assets/js/12.815fb38d.js"><link rel="prefetch" href="/ieu-js-sdk/assets/js/13.2f968ec1.js"><link rel="prefetch" href="/ieu-js-sdk/assets/js/14.d2ddc818.js"><link rel="prefetch" href="/ieu-js-sdk/assets/js/15.a146fa9f.js"><link rel="prefetch" href="/ieu-js-sdk/assets/js/16.1572e5bf.js"><link rel="prefetch" href="/ieu-js-sdk/assets/js/2.45932810.js"><link rel="prefetch" href="/ieu-js-sdk/assets/js/3.cee245a3.js"><link rel="prefetch" href="/ieu-js-sdk/assets/js/4.b4088367.js"><link rel="prefetch" href="/ieu-js-sdk/assets/js/5.42433e02.js"><link rel="prefetch" href="/ieu-js-sdk/assets/js/7.b772706a.js"><link rel="prefetch" href="/ieu-js-sdk/assets/js/8.a594289b.js"><link rel="prefetch" href="/ieu-js-sdk/assets/js/9.06a900d7.js">
     <link rel="stylesheet" href="/ieu-js-sdk/assets/css/0.styles.4dcdadaf.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/ieu-js-sdk/" class="router-link-active">
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/ieu-js-sdk/" class="router-link-active">
       Take me home.
     </a></div></div><div class="global-ui"></div></div>
-    <script src="/ieu-js-sdk/assets/js/app.fa43aac8.js" defer></script><script src="/ieu-js-sdk/assets/js/6.60d915b0.js" defer></script>
+    <script src="/ieu-js-sdk/assets/js/app.01985006.js" defer></script><script src="/ieu-js-sdk/assets/js/6.60d915b0.js" defer></script>
   </body>
 </html>
